* BUG#9619 The SEPA mandate cannot be cancelled if there is any draft / validated / processing payment which use it
* BUG#8968 Do not set the RUM value with the default configuration if it already exists
* BUG#9368 Do not override conf parameters by empty ones
* BUG#9249 Fix super call on the sepa payment fail message create (batch)
* BUG#9008 Fix sepa mandate numbers computation
* BUG#8909 Strop spaces from AdrLine fields

Version 2.0 - 2018-04-13
* BUG#8645 Normalize addresses fields in SEPA/Cfonb files in order to no longer have special characters
* FEA#8521 Add index on sepa mandate field of payments (improve batch process)
* BUG#8319 Really fix 7981, check if the user set the in_directory parameter of the account.payment.fail batch (even if it is a wrong path), if not use the default parameter set in batch.conf
* BUG#7981 Check if the user set the in_directory parameter of the account.payment.fail batch (even if it is a wrong path), if not use the default parameter set in batch.conf
* BUG#7646 Before approving a manual payment check that the bank account is equal to the bank account on the SEPA mandate
* BUG#7904 Implement amendment informations also for CFONB
* FEA#7663 Manage a SEPA debtor other than the company
* FEA#7663 Allow to set a SEPA creditor other than company on payment journal
* BUG#7569 Fix crash of SEPA fail batch

Version 1.14 - 2017-11-09
* BUG#7346 Add configuration to enable the SEPA amendment feature
* FEA#7246 Add payments as a linked record to party
* BUG#7058 Amendments should return a compact IBAN
* BUG#6999 Remove party from payment group key
* BUG#6939 Fix the domain of the SEPA message generation button
* FEA#5500 New sepa standard: Rulebooks SDD Core V9.0 and SDD B2B V7.0: only generate 'RCUR' sepa payment sequence type and remove 'FRST' type
* BUG#6107 The bank account is now invisible in the payment creation wizard when the process method is not SEPA
* BUG#6817 Remove party from payment group key
* OTH#0000 Complement #6792