@@ -1,3 +1,4 @@
+* BUG#9643 Make country codes mandatory
 * BUG#9619 The SEPA mandate cannot be cancelled if there is any draft / validated / processing payment which use it
 * BUG#8968 Do not set the RUM value with the default configuration if it already exists
 * BUG#9368 Do not override conf parameters by empty ones
